re PR c/14114 ([unit-at-a-time] ICE in gen_subprogram_die)

PR c/14114
	* c-decl.c (merge_decls): Do not copy the C_DECL_INVISIBLE flag
	from the new decl to the old decl.
	(pushdecl): Use lookup_name to search for a previous decl with the
	same identifier.

From-SVN: r79457